<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
 <name>agvpc_ros2</name>
 <version>0.0.0</version>
 <description>agvpc_ros2 package used for communicate with hmi,robot arm and server</description>
 <maintainer email="didem.ozupektas@inovasyonmuhendislik.com">Didem Ozupek Tas</maintainer>
 <license>Apache License 2.0</license>

 <buildtool_depend>ament_python</buildtool_depend>

 <test_depend>ament_copyright</test_depend>
 <test_depend>ament_flake8</test_depend>
 <test_depend>ament_pep257</test_depend>
 <test_depend>python3-pytest</test_depend>

 <export>
   <build_type>ament_python</build_type>
 </export>
</package>
